# ecommerce-api

./: .gitignore  README.md  pyproject.toml
likes/: models.py
likes/migrations/: 0001_initial.py
playground/: views.py
store/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
store/management/commands/: generate_fake_data.py
store/migrations/: 0001_initial.py  0002_alter_cartitem_cart_alter_cartitem_quantity.py
storefront/: settings.py  urls.py
tags/: models.py
tags/migrations/: 0001_initial.py
